--- a/DatePicker.html
+++ b/DatePicker.html
@@ -168,6 +168,7 @@
     <script src="./DatePicker.js"></script>
     <script>
         ; (function () {
+            //存放选中的时间
             var finalDateArr = [];
             var time = document.getElementById('time');
 
