--- a/DatePickerDemo.html
+++ b/DatePickerDemo.html
@@ -27,6 +27,7 @@
             height: 224px;
             bottom: 0;
             left: 0;
+            z-index: 1;
         }
 
         .box::before {
